--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 
+.container {
+    margin: 0px 100px;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav-menu {
@@ -31,4 +36,49 @@ nav {
 
 .nav-menu li a:hover {
     text-decoration: underline blue 5px;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+@media only screen and (max-width: 1200px) {
+    .nav-menu {
+        display: none;
+    }
+
+    .icon {
+        display: block;
+        background-color: gray;
+        width: 18px;
+        height: 2px;
+    }
+
+    .icon::after {
+        content: "";
+        background-color: gray;
+        width: 18px;
+        height: 2px;
+        position: absolute;
+        top: 9px;
+    }
+
+    .icon::before {
+        content: "";
+        background-color: gray;
+        width: 18px;
+        height: 2px;
+        position: absolute;
+        top: 5px;
+    }
+
+    #nav-toggle:checked ~ ul.nav-menu {
+        display: block;
+        position: absolute;
+        left: 0px;
+        top: 30px;
+        background-color: blue;
+        width: 100%;
+        text-align: center;
+    }
 }
