--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+
 .container {
     margin: 0px 100px;
 }
@@ -12,6 +16,11 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.title a {
+    text-decoration: none;
+    color: black;
 }
 
 .nav-menu {
