patch: It will create section2 and style it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ body {
     font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
+.section1 {
+    background-color: rgba(242,242,242,1);
+}
+
 .container {
     margin: 0px 100px;
 }
@@ -59,7 +63,15 @@ nav {
 
 .vrc {
     width: 50%;
-    flex: 0 0 auto;
+    /* flex: 0 0 auto; */
+}
+
+.vrc-4 {
+    width: 25%;
+}
+
+.vrc-8 {
+    width: 75%;
 }
 
 .mt-2 {
