--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,10 @@ img {
     align-self: center;
 }
 
+.col-3 {
+    width: 25%;
+}
+
 @media only screen and (max-width: 1200px) {
     .nav-menu {
         display: none;
@@ -144,6 +148,16 @@ img {
         background-color: blue;
         width: 100%;
         text-align: center;
+    }
+
+    .crd {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .crd .col-3 {
+        width: 70%;
     }
 }
 
