patch: It will create work experience section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,4 +211,8 @@ img {
     .text-center {
         text-align: center;
     }
+
+    .reverse-flex {
+        flex-direction: column-reverse;
+    }
 }
