--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ body {
     font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
+.bg-theme {
+    background-color: rgba(242,242,242,1);
+}
+
 .section1 {
     background-color: rgba(242,242,242,1);
 }
@@ -139,6 +143,11 @@ img {
 
 .w-30 {
     width: 30%;
+}
+
+.note {
+    border-radius: 10px;
+    padding: 20px;
 }
 
 @media only screen and (max-width: 1200px) {
