--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,14 @@ img {
     padding: 20px;
 }
 
+.hobbies {
+    list-style: none;
+}
+
+.div-center {
+    margin: 0px auto;
+}
+
 @media only screen and (max-width: 1200px) {
     .nav-menu {
         display: none;
