--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,10 @@ img {
     margin: 0px auto;
 }
 
+.flex-between {
+    justify-content: space-between;
+}
+
 @media only screen and (max-width: 1200px) {
     .nav-menu {
         display: none;
